--- a/index.html
+++ b/index.html
@@ -47,16 +47,28 @@
   </style>
   <body style="font-family: Open Sans; background: #f1f1e4">
     <div class="row" style="height: 56px">
-      <div class="col-3" style="background: rgba(39, 39, 37, 1)"></div>
-      <div class="col-2" style="background: rgba(176, 19, 19, 1)"></div>
-      <div class="col-1 text-center pt-3 home menu-button active">
+      <div
+        class="col-lg-3 d-none d-lg-block"
+        style="background: rgba(39, 39, 37, 1)"
+      ></div>
+      <div
+        class="col-lg-2 d-none d-lg-block"
+        style="background: rgba(176, 19, 19, 1)"
+      ></div>
+      <div class="col-lg-1 col-6 text-center pt-3 home menu-button active">
         <strong>Home</strong>
       </div>
-      <div class="col-1 text-center pt-3 contact menu-button">
+      <div class="col-lg-1 col-6 text-center pt-3 contact menu-button">
         <strong>Contact</strong>
       </div>
-      <div class="col-2" style="background: rgba(176, 19, 19, 1)"></div>
-      <div class="col-3" style="background: rgba(39, 39, 37, 1)"></div>
+      <div
+        class="col-lg-2 d-none d-lg-block"
+        style="background: rgba(176, 19, 19, 1)"
+      ></div>
+      <div
+        class="col-lg-3 d-none d-lg-block"
+        style="background: rgba(39, 39, 37, 1)"
+      ></div>
     </div>
     <div class="row" style="height: 100px">
       <div
@@ -72,7 +84,7 @@
           class="row justify-content-around p-4"
           style="color: #f0f0da; background: #272725"
         >
-          <div class="col-6 text-justify">
+          <div class="col-lg-6 col-12 text-justify">
             <p>
               For the past thirty years, I have advocated on behalf of
               individuals and corporations in a myriad of contexts. I’ve
@@ -95,8 +107,8 @@
               needs.  
             </p>
           </div>
-          <div class="col-4">
-            <img src="Seth2_BW_REV2.jpg" style="height: 300" />
+          <div class="col-lg-4 col-12 text-center">
+            <img src="Seth2_BW_REV2.jpg" style="width: 80%" />
             <div class="font-light" style="font-size: small">
               <i>Seth Goodman Park, Esq.</i>
             </div>
@@ -123,7 +135,7 @@
       </div>
       <div class="container" style="font-size: 14">
         <div class="row mt-4" style="min-height: 300px">
-          <div class="col-6" style="border-right: 2px dashed #9d9d94">
+          <div class="col-lg-6 col-12" style="border-right: 2px dashed #9d9d94">
             <div class="row text-center justify-content-center">
               <div class="col-12" style="font-size: 20">
                 Immigration Law Advocacy
@@ -175,13 +187,13 @@
                   </ul>
                 </div>
               </div>
-              <div class="row mt-4">
-                <div class="col">
+              <div class="col">
+                <p>
                   I have volunteered as an attorney for the following
                   organizations:
-                </div>
+                </p>
               </div>
-              <div class="row mt-4">
+              <div class="row mt-4 pr-4">
                 <div class="col">
                   <ul>
                     <li>
@@ -221,7 +233,7 @@
               </div>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 col-12">
             <div div class="row text-center justify-content-center">
               <div class="col-12" style="font-size: 20">
                 Litigation Assistance
@@ -301,8 +313,11 @@
       class="row mt-4"
       style="height: 56px; background: rgba(39, 39, 37, 1); font-size: 14"
     >
-      <div class="col-3" style="background: rgba(176, 19, 19, 1)"></div>
-      <div class="col align-self-center" style="color: #aa9f7b">
+      <div
+        class="col-lg-3 d-none d-lg-block"
+        style="background: rgba(176, 19, 19, 1)"
+      ></div>
+      <div class="col align-self-center px-4" style="color: #aa9f7b">
         &ZeroWidthSpace;&ZeroWidthSpace;&ZeroWidthSpace;&ZeroWidthSpace;©&nbsp;
         Seth Goodman Park&nbsp; &nbsp; &nbsp; •&nbsp; &nbsp; &nbsp; Website
         design by Jaye Medalia
@@ -310,7 +325,10 @@
           <img class="float-right" src="linkedInlogo.jpg"
         /></a>
       </div>
-      <div class="col-3" style="background: rgba(176, 19, 19, 1)"></div>
+      <div
+        class="col-lg-3 d-none d-lg-block"
+        style="background: rgba(176, 19, 19, 1)"
+      ></div>
     </div>
   </body>
 </html>
