Working on the contact page, need to pull

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     class="row justify-content-around p-4"
     style="color: #f0f0da; background: #272725"
   >
-    <div class="col-6 text-justify">
+    <div class="col-lg-6 col-12 text-justify">
       <p>
         For the past thirty years, I have advocated on behalf of individuals and
         corporations in a myriad of contexts. I’ve associated with firms and
@@ -24,8 +24,8 @@
         other legal service organizations with their advocacy needs.  
       </p>
     </div>
-    <div class="col-4">
-      <img src="Seth2_BW_REV2.jpg" style="height: 300" />
+    <div class="col-lg-4 col-12 text-center">
+      <img src="Seth2_BW_REV2.jpg" style="width: 80%" />
       <div class="font-light" style="font-size: small">
         <i>Seth Goodman Park, Esq.</i>
       </div>
@@ -52,7 +52,7 @@
 </div>
 <div class="container" style="font-size: 14">
   <div class="row mt-4" style="min-height: 300px">
-    <div class="col-6" style="border-right: 2px dashed #9d9d94">
+    <div class="col-lg-6 col-12" style="border-right: 2px dashed #9d9d94">
       <div class="row text-center justify-content-center">
         <div class="col-12" style="font-size: 20">Immigration Law Advocacy</div>
         <div class="hl2line"></div>
@@ -98,12 +98,12 @@
             </ul>
           </div>
         </div>
-        <div class="row mt-4">
-          <div class="col">
+        <div class="col">
+          <p>
             I have volunteered as an attorney for the following organizations:
-          </div>
+          </p>
         </div>
-        <div class="row mt-4">
+        <div class="row mt-4 pr-4">
           <div class="col">
             <ul>
               <li>
@@ -143,7 +143,7 @@
         </div>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-lg-6 col-12">
       <div div class="row text-center justify-content-center">
         <div class="col-12" style="font-size: 20">Litigation Assistance</div>
         <div class="hl2line"></div>
