Fix alignment of disclaimer

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 
   <script src="//embed.typeform.com/next/embed.js"></script>
   <div class="row justify-content-center mt-4">
-    <div class="col-6-lg col-12" style="font-size: 12">
+    <div class="col-lg-6 col-12" style="font-size: 12">
       <p>
         ©2021 GoodmanPark Law, PLLC. All rights reserved. This website may
         contain Attorney Advertising under the laws of various states.
