--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,12 @@
       >
     </p>
   </div>
+  <div class="row">
+    <div class="col">
+      You can also contact me by using this very short form and I will get back
+      to you as soon as possible.
+    </div>
+  </div>
   <div class="row justify-content-center">
     <div
       class="col-lg-8 col-12"
@@ -54,8 +60,9 @@
   <div class="row justify-content-center mt-4">
     <div class="col-lg-6 col-12" style="font-size: 12">
       <p>
-        ©2021 GoodmanPark Law, PLLC. All rights reserved. This website may
-        contain Attorney Advertising under the laws of various states.
+        ©2021 GoodmanPark Law, PLLC. All rights reserved. The content of this
+        website may be considered attorney advertising under applicable laws and
+        ethical rules.
       </p>
       <br />
       <p>
