--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
       <p>
         For the past thirty years, I have advocated on behalf of individuals and
         corporations in a myriad of contexts. I’ve associated with firms and
-        companies of various sizes and, in those roles, I’ve argued issues and
-        cases in a number of different legal settings.
+        companies of various sizes and, in those roles, I’ve presented issues
+        and litigated cases in a number of different legal settings.
       </p>
       <br />
       <p>
@@ -154,7 +154,10 @@
           <p>
             I freelance in civil litigation matters, covering court appearances
             and depositions, researching and drafting briefs, conducting
-            document reviews, and assisting in other legal advocacy projects.
+            document reviews, and assisting in other legal advocacy projects. My
+            practice areas include complex insurance coverage disputes, breach
+            of contract claims, business torts, employment litigation, and
+            personal injury claims.
           </p>
           <br />
           <p>Over the years I have:</p>
