--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
               For the past thirty years, I have advocated on behalf of
               individuals and corporations in a myriad of contexts. I’ve
               associated with firms and companies of various sizes and, in those
-              roles, I’ve argued issues and cases in a number of different legal
-              settings.
+              roles, I’ve presented issues and litigated cases in a number of
+              different legal settings.
             </p>
             <br />
             <p>
@@ -247,7 +247,9 @@
                   I freelance in civil litigation matters, covering court
                   appearances and depositions, researching and drafting briefs,
                   conducting document reviews, and assisting in other legal
-                  advocacy projects.
+                  advocacy projects. My practice areas include complex insurance
+                  coverage disputes, breach of contract claims, business torts,
+                  employment litigation, and personal injury claims.
                 </p>
                 <br />
                 <p>Over the years I have:</p>
