--- a/contact.html
+++ b/contact.html
@@ -43,12 +43,12 @@
     </p>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col text-center">
       You can also contact me by using this very short form and I will get back
       to you as soon as possible.
     </div>
   </div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center mt-2">
     <div
       class="col-lg-8 col-12"
       data-tf-widget="NjROA2OS"
