--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       </div>
       <div class="container" style="font-size: 14">
         <div class="row mt-4" style="min-height: 300px">
-          <div class="col-lg-6 col-12" style="border-right: 2px dashed #9d9d94">
+          <div class="col-lg-5 col-12">
             <div class="row text-center justify-content-center">
               <div class="col-12" style="font-size: 20">
                 Immigration Law Advocacy
@@ -234,7 +234,12 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-12">
+          <div
+            class="d-none d-sm-block col"
+            style="border-right: 2px dashed #9d9d94"
+          ></div>
+          <div class="d-none d-sm-block col"></div>
+          <div class="col-lg-5 col-12">
             <div div class="row text-center justify-content-center">
               <div class="col-12" style="font-size: 20">
                 Litigation Assistance
