--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap"
       rel="stylesheet"
     />
+	<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script type="text/javascript" src="goodman_park.js"></script>
@@ -74,7 +75,7 @@
     <div class="row" style="height: 100px">
       <div
         class="col text-center align-self-center"
-        style="font-size: 29px; letter-spacing: 0.1em"
+        style="font-size: 29px; letter-spacing: 0.1em; font-family: Merriweather;"
       >
         GoodmanPark Law, PLLC 
       </div>
@@ -85,15 +86,14 @@
           class="row justify-content-around p-4"
           style="color: #f0f0da; background: #272725"
         >
-          <div class="col-lg-6 col-12 text-justify">
-            <p>
+          <div class="col-lg-6 col-12">
+            <p class="mt-4">
               For the past thirty years, I have advocated on behalf of
               individuals and corporations in a myriad of contexts. I’ve
               associated with firms and companies of various sizes and, in those
               roles, I’ve presented issues and litigated cases in a number of
               different legal settings.
             </p>
-            <br />
             <p>
               I’ve won bench and jury trial verdicts, argued successful motions,
               drafted winning briefs, and prevailed in arbitration. I’ve
@@ -101,14 +101,13 @@
               clients in negotiating optimal settlements, both in direct
               negotiations and with the participation of party neutrals.
             </p>
-            <br />
             <p>
               I started GoodmanPark Law in 2020 to assist individuals, law
               firms, and other legal service organizations with their advocacy
               needs.  
             </p>
           </div>
-          <div class="col-lg-4 col-12 text-center">
+          <div class="col-lg-4 col-12 mt-4">
             <img src="Seth2_BW_REV2.jpg" style="width: 80%" />
             <div class="font-light" style="font-size: small">
               <i>Seth Goodman Park, Esq.</i>
@@ -182,7 +181,7 @@
                     <li>Motions to reopen proceedings</li>
                     <li>Motions for change of venue</li>
                     <li>Bond redetermination hearings</li>
-                    <li>Withholding ofremoval and CAT applications</li>
+                    <li>Withholding of Removal and CAT applications</li>
                     <li>Reasonable Fear Interviews</li>
                     <li>Cancellation of Removal merits hearings</li>
                   </ul>
@@ -285,7 +284,6 @@
             </div>
             <div
               class="row text-center justify-content-center"
-              style="margin-top: 68px"
             >
               <div class="col-12" style="font-size: 20">About Me</div>
               <div class="hl2line"></div>
