--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -52,12 +54,27 @@
 		font-size: 50px;
 	}
 
+  .large-icon {
+    font-size: 60px
+  }
+
   </style>
   <body style="font-family: Open Sans; background: #f1f1e4">
 	<container>
 		<row>
 			<div class="top-spacing text-center align-self-center">
-				Under Construction
+				<span class="material-icons large-icon">
+          construction
+        </span>
+        Under Construction
+        <span class="material-icons large-icon">
+          construction
+          </span>
+			</div>
+		</row>
+		<row>
+			<div class="mt-4 text-center align-self-center">
+				Please pardon our appearance while we do some updating.
 			</div>
 		</row>
 	</container>
